xml fix